# docman

./: .gitattributes  Cargo.toml  README.md
crates/dm-checks/: Cargo.toml
crates/dm-checks/src/: lib.rs
crates/dm-cli/: Cargo.toml
crates/dm-cli/src/: main.rs
crates/dm-index/: Cargo.toml
crates/dm-index/src/: lib.rs
crates/dm-meta/: Cargo.toml
crates/dm-meta/src/: lib.rs
crates/dm-scan/: Cargo.toml
crates/dm-scan/src/: lib.rs
tests/fixtures/docs/: no_frontmatter.md
tests/fixtures/docs/active/api/: CLI_REFERENCE.md
tests/fixtures/docs/active/architecture/: CORE_CONCEPTS.md  EXECUTION_ENGINE.md
tests/fixtures/docs/active/guides/: GETTING_STARTED.md
tests/fixtures/docs/archive/2025/: execution-engine-v1.md
tests/fixtures/docs/design/2026/accepted/: 002-context-fidelity.md
tests/fixtures/docs/design/2026/proposed/: 001-recursive-optimization.md
tests/fixtures/docs/research/2026/: ai-optimization-techniques.md  competitor-analysis.md
