[package]
name = "dm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for managing technical documentation"

[[bin]]
name = "docman"
path = "src/main.rs"

[dependencies]
dm-meta = { version = "0.1.0", path = "../dm-meta" }
dm-scan = { version = "0.1.0", path = "../dm-scan" }
dm-checks = { version = "0.1.0", path = "../dm-checks" }
dm-index = { version = "0.1.0", path = "../dm-index" }
clap.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
regex.workspace = true
glob.workspace = true
