[package]
name = "dm-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML frontmatter parser and validator for technical documentation"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
